Mar. 19, Completed the UI of the "TakePictureIIActivity" activity - Mock Page 5

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".activities.StepsActivity"></activity>
         <activity android:name=".activities.TipsActivity"></activity>
         <activity android:name=".activities.TakePictureIActivity"></activity>
+        <activity android:name=".activities.TakePictureIIActivity"></activity>
     </application>
 
 </manifest>
