Mar. 23: Figured out the way to take picture and save to external storage - should be one of the most challenging part of the app TODO: 1. create an activity to display the taken pictures 2. for continue button, make sure 5 required pictures got taken and then make it clickable

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.deenma.chef">
 
+    <uses-feature android:name="android.hardware.camera"
+        android:required="true" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".activities.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,11 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".activities.StepsActivity"></activity>
         <activity android:name=".activities.TipsActivity"></activity>
         <activity android:name=".activities.TakePictureIActivity"></activity>
         <activity android:name=".activities.TakePictureIIActivity"></activity>
     </application>
-
 </manifest>
