April 1: Information - learned how to use spinner TODO: add spinner behavior. refer to this website: https://developer.android.com/guide/topics/ui/controls/spinner.html

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,5 +25,7 @@
         <activity android:name=".activities.TipsActivity"></activity>
         <activity android:name=".activities.TakePictureIActivity"></activity>
         <activity android:name=".activities.TakePictureIIActivity"></activity>
+        <activity android:name=".activities.TakePictureIIIActivity"></activity>
+        <activity android:name=".activities.InformationActivity"></activity>
     </application>
 </manifest>
