Apr. 2: 1. Added "View Image" function 2. Implemented "InformationActivity" 3. Refactored some code into Utilities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,5 +27,6 @@
         <activity android:name=".activities.TakePictureIIActivity"></activity>
         <activity android:name=".activities.TakePictureIIIActivity"></activity>
         <activity android:name=".activities.InformationActivity"></activity>
+        <activity android:name=".activities.ImageViewActivity"></activity>
     </application>
 </manifest>
