Apr. 6: Updates - 1. Refactored the code: write a function to get image in a path to imageview 2. Changed the format of all spinner results from CharSequence to String for easier maintenance 3. Write setupButton into Utilities so that buttons in TakePictureIIActivity can call this function 4. Implemented JudgementSendingActivity so that all the information to be sent to server are visible inside 5. Updated pictures, more detailed information included

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,5 +32,6 @@
         <activity android:name=".activities.ImageViewActivity"></activity>
         <activity android:name=".activities.MakeAgreementActivity"></activity>
         <activity android:name=".activities.AgreementActivity"></activity>
+        <activity android:name=".activities.JudgementSendingActivity"></activity>
     </application>
 </manifest>
