Apr. 8: Complete the framework of FileClaimActivity TODO: set up two buttons

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,5 +34,6 @@
         <activity android:name="com.apps.deenma.chef.activities.MakeAgreementActivity"></activity>
         <activity android:name="com.apps.deenma.chef.activities.AgreementActivity"></activity>
         <activity android:name="com.apps.deenma.chef.activities.JudgementSendingActivity"></activity>
+        <activity android:name="com.apps.deenma.chef.activities.FileClaimActivity"></activity>
     </application>
 </manifest>
