Apr. 9: Added FileSuccessActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,5 +35,6 @@
         <activity android:name="com.apps.deenma.chef.activities.AgreementActivity"></activity>
         <activity android:name="com.apps.deenma.chef.activities.JudgementSendingActivity"></activity>
         <activity android:name="com.apps.deenma.chef.activities.FileClaimActivity"></activity>
+        <activity android:name="com.apps.deenma.chef.activities.FileSuccessActivity"></activity>
     </application>
 </manifest>
