Apr. 9: Added FileCanceledActivity Completed implementation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,5 +36,6 @@
         <activity android:name="com.apps.deenma.chef.activities.JudgementSendingActivity"></activity>
         <activity android:name="com.apps.deenma.chef.activities.FileClaimActivity"></activity>
         <activity android:name="com.apps.deenma.chef.activities.FileSuccessActivity"></activity>
+        <activity android:name="com.apps.deenma.chef.activities.FileCanceledActivity"></activity>
     </application>
 </manifest>
